--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="about-content-main">
                     <h3 class="content-title">Get to know me!</h3>
                     <div class="content-details">
-                        <p class="content-paragraph">Hey everyone! I'm Jacob, and I'm on an exciting journey as a <span class="about-content-p"><strong>Frontend Developer</strong></span> at Medieinstitutet. It's been an incredible ride diving into the world of web development for over a year now, and I've truly found my passion in crafting user-friendly web applications. There's something so rewarding about fine-tuning the look and feel of a website, creating interfaces that not only catch your eye but also make you want to explore further.<br> <br>And when it comes to navigation, I'm all about making it as smooth as butter, because who wants to get lost in a maze of links, right? But beyond the pixels and code, what really fuels me is knowing that I'm making a difference in people's digital experiences. Whether it's simplifying a complex process or just bringing a smile to someone's face with an intuitive design, that's what keeps me going. So, if you're ready to embark on a journey of creating something awesome together, I'm here and excited to dive in headfirst. Let's make some magic happen!</p>
+                        <p class="content-paragraph">Hey everyone! I'm Jacob, and I'm on an exciting journey as a <span class="about-content-p"><strong>Frontend Developer</strong></span> at Medieinstitutet. It's been an incredible ride diving into the world of web development for over a year now, and I've truly found my passion in crafting user-friendly web applications. There's something so rewarding about fine-tuning the look and feel of a website, creating interfaces that not only catch your eye but also make you want to explore further.<br><br>And when it comes to navigation, I'm all about making it as smooth as butter, because who wants to get lost in a maze of links, right? But beyond the pixels and code, what really fuels me is knowing that I'm making a difference in people's digital experiences. Whether it's simplifying a complex process or just bringing a smile to someone's face with an intuitive design, that's what keeps me going. So, if you're ready to embark on a journey of creating something awesome together, I'm here and excited to dive in headfirst. Let's make some magic happen!</p>
                     </div>
                     <div class="btn-container">
                         <a href="assets/JACOB-LIMPAR-LANTZ-RESUME.pdf" download="resume.pdf" target="_blank">
@@ -121,7 +121,7 @@
                         <p class="project-p">The webshop project, a group assignment utilized <span class="project-p-html">HTML</span>, <span class="project-p-sass">Sass</span>, and <span class="project-p-typescript">Typescript</span>. Users could add items to their cart, review selections, and proceed to checkout by entering payment and shipping details.</p>
                         <div class="project-btns">
                             <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/the-webshop-team-10', '_blank')">Github</button>
-                            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                            <button class="btn-demo" onclick="window.open('https://github.com', '_blank')">Live Demo</button>
                         </div>
                     </div>
                 </div>
@@ -132,8 +132,8 @@
                         <h3 class="project-title">ChatBox</h3>
                         <p class="project-p">The chatbox project, created as a group effort, employs <span class="project-p-html">HTML</span>, <span class="project-p-css">CSS</span>, <span class="project-p-javascript">JavaScript</span> and <span class="project-p-sql">SQL</span>. Users can register, log in, and chat with other logged-in users in real-time. The project focuses on facilitating secure online communication among users.</p>
                         <div class="project-btns">
-                            <button class="btn-github" onclick="location.href='https://github.com/'">Github</button>
-                            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                            <button class="btn-github" onclick="window.open('https://github.com/Thefirat/API-Grupp1-Chat-Backend', '_blank')">Github</button>
+                            <button class="btn-demo" onclick="window.open('https://github.com', '_blank')">Live Demo</button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         <p class="project-p">A simple todo list application developed with <span class="project-p-html">HTML</span>, <span class="project-p-css">CSS</span> and <span class="project-p-javascript">JavaScript</span>. Users can add, remove, and mark tasks as completed. Tasks can be added dynamically, removed with a single click, and marked as complete for easy tracking. </p>
                         <div class="project-btns">
                             <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/todos-LaNtZ445', '_blank')">Github</button>
-                            <button class="btn-demo" onclick="location.href='https://github.com/'">Live Demo</button>
+                            <button class="btn-demo" onclick="window.open('https://todo-applicationss.netlify.app', '_blank')">Live Demo</button>
                         </div>
                     </div>
                 </div>
