--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
         <div class="footer-p">
             <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
         </div>
+        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" target="_blank" rel="noopener noreferrer">
+            <div class="easter-egg">
+                <i class="fas fa-egg"></i>
+            </div>
+        </a>
     </footer>
 
     <script src="src/js/index.js"></script>
