--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <p class="project-p">The webshop project, a group assignment utilized <span class="project-p-html">HTML</span>, <span class="project-p-sass">Sass</span>, and <span class="project-p-typescript">Typescript</span>. Users could add items to their cart, review selections, and proceed to checkout by entering payment and shipping details.</p>
                         <div class="project-btns">
                             <button class="btn-github" onclick="window.open('https://github.com/Medieinstitutet/the-webshop-team-10', '_blank')">Github</button>
-                            <button class="btn-demo" onclick="window.open('https://github.com', '_blank')">Live Demo</button>
+                            <button class="btn-demo" onclick="window.open('https://webshoppen.netlify.app', '_blank')">Live Demo</button>
                         </div>
                     </div>
                 </div>
