added mobile responsivnes :)

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </section>
 
     <section id="contact" class="section">
-        <h1 class="title">Contact Me</h1>
+        <h1 class="contact-title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="home-hero__social">
                 <a href="mailto:jacoblimparlantz@gmail.com?Subject=Frontend%20Developer%20Portfolio%20Inquiry" class="home-hero__social-icon-link" target="_blank">
