updated portfolio link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="content-paragraph">Hey everyone! I'm Jacob, and I'm on an exciting journey as a <span class="about-content-p"><strong>Frontend Developer</strong></span> at Medieinstitutet. It's been an incredible ride diving into the world of web development for over a year now, and I've truly found my passion in crafting user-friendly web applications. There's something so rewarding about fine-tuning the look and feel of a website, creating interfaces that not only catch your eye but also make you want to explore further.<br><br>And when it comes to navigation, I'm all about making it as smooth as butter, because who wants to get lost in a maze of links, right? But beyond the pixels and code, what really fuels me is knowing that I'm making a difference in people's digital experiences. Whether it's simplifying a complex process or just bringing a smile to someone's face with an intuitive design, that's what keeps me going. So, if you're ready to embark on a journey of creating something awesome together, I'm here and excited to dive in headfirst. Let's make some magic happen!</p>
                     </div>
                     <div class="btn-container">
-                        <a href="/assets/jacob-limpar-lantz-resume.pdf" download="resume.pdf" target="_blank">
+                        <a href="/assets/JACOB LIMPAR LANTZ.pdf" download="resume.pdf" target="_blank">
                             <button class="btn-about">
                                 Download Resume &nbsp;<i class="fas fa-file file-icon"></i>
                             </button>
