--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="home-hero__social">
                 <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
-                    <i class="icon fab fa-github"></i>
+                    <i class="icon fab fa-linkedin-in"></i>
                 </a>
                 <p class="contact__link-p"><a href="https://www.linkedin.com">Linkedin</a></p>
             </div>
