--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <a href="https://github.com/LaNtZ445" class="home-hero__social-icon-link" target="_blank">
                     <i class="icon fab fa-linkedin-in"></i>
                 </a>
-                <p class="contact__link-p"><a href="https://www.linkedin.com">Linkedin</a></p>
+                <p class="contact__link-p"><a href="https://www.linkedin.com" target="_blank">Linkedin</a></p>
             </div>
         </div>
     </section>
