--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
     <footer id="footer" class="section">
         <div class="footer-p">
-            <p>Copyright &#169; 2023 Jacob Limapr Lantz. All Rights Reserved.</p>
+            <p>Copyright &#169; 2023 Jacob Limpar Lantz. All Rights Reserved.</p>
         </div>
         <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" target="_blank" rel="noopener noreferrer">
             <div class="easter-egg">
